group 'zone.kaz.alight_midi'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'application'

sourceCompatibility = JavaVersion.VERSION_1_10
targetCompatibility = JavaVersion.VERSION_1_10

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'com.google.inject', name: 'guice', version: '4.0'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.3.4'
    compile group: 'com.github.wendykierp', name: 'JTransforms', version: '3.1', classifier: 'with-dependencies'
    compile group: 'commons-io', name: 'commons-io', version: '2.5'
    testCompile group: 'junit', name: 'junit', version: '4.11'
}

mainClassName = 'zone.kaz.alight_midi.gui.MainApplication'

def executableBaseName = "alight_midi"

task executableJar(type: Jar, dependsOn: jar) {
    archiveName = "${executableBaseName}.jar"
    manifest {
        attributes 'Main-Class' : mainClassName
    }

    from configurations.compile.collect {it.isDirectory() ? it : zipTree(it)}
    from "$buildDir/classes/java/main"
    from "$buildDir/resources/main"
}

allprojects {
    gradle.projectsEvaluated {
        tasks.withType(JavaCompile) {
            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
        }
    }
}
